Update suggestions for adding external deps w/ Java 9 [ci skip]